hw2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: hw2
  labels:
    app: test
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: daslapovsky/otus:0.1.3
          name: supercontainer
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
