hw2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: hw2
spec:
  type: ClusterIP
  ports:
    - port: 7777
      targetPort: 3000
  selector:
    app: myapp
